Fix z-index

--- a/src/styles/componentStyles/cancerMenuStyles/SearchBarStyles.css
+++ b/src/styles/componentStyles/cancerMenuStyles/SearchBarStyles.css
@@ -40,7 +40,6 @@ input:focus {
     height: 150px;
     background-color: #f3f3f3;
     overflow-y: auto;
-    z-index: 10000;
 }
 
 .dataItem {
