--- a/src/styles/pageStyles/ClinicalTrialsStyles.css
+++ b/src/styles/pageStyles/ClinicalTrialsStyles.css
@@ -29,7 +29,7 @@
 .MuiTableHead-root {
 	position: sticky;
 	top: 0;
-	z-index: 9999;
+	z-index: 10;
 }
 * {
 	/*
